# reverse-apply

./: COPYING  README.md  reverse-apply.cabal
src/Control/Apply/: Reverse.hs
